add desktop header

--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -4,23 +4,11 @@
   list-style: none;
 }
 
-@mixin visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 @mixin wrapper {
   margin: 0 auto;
-  padding: 0 20%;
-  max-width: 260px;
+  padding: 0 30px;
+  width: 100%;
+  max-width: $desktop-width;
 
   // @media (min-width: @tablet-width) {
   //   padding-left: 50px;
@@ -31,4 +19,16 @@
   // @media (min-width: @desktop-width) {
   //   max-width: 1050px;
   // }
+}
+
+// @mixin pseudo ($display: block, $pos: absolute, $content: "") {
+//   content: $content;
+//   display: $display;
+//   position: $pos;
+// }
+
+@mixin pseudo {
+  content: "";
+  display: block;
+  position: absolute;
 }
