--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,7 @@
 @import "global/vars";
 @import "global/fonts";
+@import "global/mixin";
+@import "global/visually-hidden";
 @import "blocks/page";
+@import "blocks/header";
+@import "blocks/site-nav";
