--- a/source/sass/global/vars.scss
+++ b/source/sass/global/vars.scss
@@ -4,6 +4,10 @@ $black: #141517;
 $dark-blue: #2c2e3f;
 $orange: #fe7865;
 $orange-hover: #f17d4b;
+$grey: #93939b;
+$dark-grey: #48494d;
+$light-grey: #f8f8f8;
+$white: #ffffff;
 
 // Viewports
 
