--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -3,10 +3,60 @@
   flex-wrap: wrap;
   align-items: center;
   color: $black;
+
+  @media (max-width: $tablet-width) {
+    color: $dark-grey;
+    display: block;
+  }
 }
 
 .site-nav__toggler {
   display: none;
+
+  @media (max-width: $tablet-width) {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 72px;
+    height: 50px;
+    border: none;
+    background-color: $orange;
+    cursor: pointer;
+
+    &::before {
+      @include pseudo;
+      top: 15px;
+      left: 25px;
+      width: 25px;
+      height: 2px;
+      background-color: $white;
+      box-shadow: 0 8px 0 0 $white, 0 16px 0 0 $white;
+    }
+  }
+}
+
+.site-nav--opened .site-nav__toggler {
+  background-color: $white;
+
+  &::before,
+  &::after {
+    @include pseudo;
+    top: 50%;
+    right: 11px;
+    width: 36px;
+    height: 2px;
+    background-color: rgba($black, 0.2);
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
 .site-nav__list {
@@ -14,14 +64,55 @@
   display: flex;
   flex-wrap: wrap;
   font-size: 14px;
+
+  @media (max-width: $tablet-width) {
+    flex-direction: column;
+    font-size: 20px;
+    line-height: 140%;
+    font-weight: 500;
+    display: block;
+    width: 100%;
+  }
+}
+
+.site-nav__item {
+  @media (max-width: $tablet-width) {
+    position: relative;
+
+    &::before,
+    &::after {
+      @include pseudo;
+      right: 30px;
+      width: 10px;
+      height: 3px;
+      background-color: $grey;
+    }
+
+    &::before {
+      top: 47%;
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      top: 53%;
+      transform: rotate(-45deg);
+    }
+  }
 }
 
 .site-nav__link {
-  padding: 20px;
+  display: inline-block;
+  padding: 40px 20px;
   text-decoration: none;
   color: inherit;
 
   &:hover {
     color: $orange-hover;
+  }
+
+  @media (max-width: $tablet-width) {
+    width: 100%;
+    background-color: $light-grey;
+    box-sizing: border-box;
   }
 }
