--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -28,9 +28,18 @@
   }
 }
 
-// .header__nav {
-//   border: 1px solid tomato;
-// }
+.header__nav {
+  @media (max-width: $tablet-width) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 1px solid tomato;
+    z-index: 10;
+    background-color: $white;
+  }
+}
 
 .header__contacts {
   display: flex;
