--- a/source/sass/global/vars.scss
+++ b/source/sass/global/vars.scss
@@ -1,6 +1,7 @@
 // Colors
 
 $black: #141517;
+$black-special: #2c2e3f;
 $dark-blue: #2c2e3f;
 $orange: #fe7865;
 $orange-hover: #f17d4b;
@@ -11,6 +12,6 @@ $white: #ffffff;
 
 // Viewports
 
-$desktop-width: 1024px;
+$desktop-width: 1170px;
 $tablet-width: 768px;
 $mobile-width: 767px;
