add adaptive footer 🌼

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -30,12 +30,11 @@
 
 .header__nav {
   @media (max-width: $tablet-width) {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border: 1px solid tomato;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // right: 0;
+    // bottom: 0;
     z-index: 10;
     background-color: $white;
   }
