--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,50 +3,77 @@
   font-size: 14px;
   line-height: 170%;
   color: rgba($black, 0.5);
+
+  @media (max-width: $desktop-width) {
+    padding-bottom: 50px;
+  }
 }
 
 .footer__wrapper {
   @include wrapper;
   display: flex;
-  // outline: 1px solid green;
   flex-wrap: wrap;
 }
+
 .footer__title {
   margin: 24px 0 25px;
+  width: 100%;
   font-size: 18px;
   color: $black;
 }
 
 .footer__column {
+  display: flex;
+  flex-wrap: wrap;
   width: 33.3333%;
   box-sizing: border-box;
-  // outline: 1px solid tomato;
+  padding: 0 10px;
+  border-right: 1px solid rgba($grey, 0.5);
 
-  &:nth-child(3n) {
-    padding-left: 50px;
-    padding-right: 10px;
+  @media (max-width: $desktop-width) {
+    width: 50%;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 100%;
+    text-align: center;
+
+    &:not(:first-child) {
+      border-top: 1px solid rgba($grey, 0.5);
+    }
   }
 
   &:nth-child(3n+2) {
     padding-left: 90px;
+
+    @media (max-width: $mobile-width) {
+      padding-left: 10px;
+      border-left: none;
+    }
   }
 
-  &:not(:nth-child(3n)) {
-    padding-right: 5px;
-    border-right: 1px solid rgba($grey, 0.5);
+  &:nth-child(3n) {
+    padding-left: 50px;
+    border-right: none;
+
+    @media (max-width: $desktop-width) {
+      padding-left: 10px;
+      margin-top: 30px;
+      width: 100%;
+      text-align: center;
+      border-top: 1px solid rgba($grey, 0.5);
+    }
   }
 }
 
 .footer__list {
   @include list-style-reset;
+  flex: 1 0 30%;
   margin-top: -4px;
-  display: flex;
-  flex-wrap: wrap;
   line-height: 200%;
 
-  li {
-    flex: 1 0 33.3333%;
-
+  @media (max-width: $mobile-width) {
+    flex-basis: 50%;
   }
 }
 
@@ -59,6 +86,7 @@
 
 .footer__contacts {
   margin-bottom: 15px;
+  width: 100%;
   display: flex;
   align-items: center;
   color: $orange;
@@ -71,5 +99,9 @@
 
   &--phone {
     font-size: 16px;
+  }
+
+  @media (max-width: $mobile-width) {
+    justify-content: center;
   }
 }
