add adaptive intro

--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -1,4 +1,10 @@
 // .title {
-//   margin: 0;
-//   // color: $black-special;
+//   // font-size: 55px;
+//   line-height: 80px;
+//   font-weight: 600;
+
+//   // @media (max-width: $desktop-width) {
+//   //   font-size: 30px;
+//   //   line-height: 150%;
+//   // }
 // }
