--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -29,3 +29,20 @@
   content: "";
   position: absolute;
 }
+
+@mixin wrapper {
+  margin: 0 auto;
+  max-width: $desktop-width;
+
+  // @media (max-width: @tablet-width) {
+  //   max-width: 1050px;
+  // }
+
+  @media (max-width: $mobile-width) {
+    padding-left: 5%;
+    padding-right: 5%;
+    min-width: $min-width;
+    box-sizing: border-box;
+  }
+
+}
