--- a/source/sass/global/vars.scss
+++ b/source/sass/global/vars.scss
@@ -13,5 +13,6 @@ $white: #ffffff;
 // Viewports
 
 $desktop-width: 1170px;
-$tablet-width: 768px;
+$tablet-width: 1023px;
 $mobile-width: 767px;
+$min-width: 320px;
