--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -1,10 +1,14 @@
-// .title {
-//   // font-size: 55px;
-//   line-height: 80px;
-//   font-weight: 600;
+.title {
+  font-size: 55px;
+  line-height: 80px;
+  font-weight: 600;
 
-//   // @media (max-width: $desktop-width) {
-//   //   font-size: 30px;
-//   //   line-height: 150%;
-//   // }
-// }
+  &--small {
+    font-size: 18px;
+  }
+
+  @media (max-width: $desktop-width) {
+    font-size: 30px;
+    line-height: 150%;
+  }
+}
