--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -33,16 +33,31 @@
 @mixin wrapper {
   margin: 0 auto;
   max-width: $desktop-width;
+  padding: 0 15px;
 
   // @media (max-width: @tablet-width) {
   //   max-width: 1050px;
   // }
 
   @media (max-width: $mobile-width) {
-    padding-left: 5%;
-    padding-right: 5%;
     min-width: $min-width;
     box-sizing: border-box;
   }
 
 }
+
+// @mixin padding {
+//   padding: 0 calc(50% - 586px);
+
+//   @media (max-width: $desktop-width) {
+//     padding: 0 calc(50% - 500px);
+//   }
+
+//   @media (max-width: $tablet-width) {
+//     padding: 0 calc(50% - 360px);
+//   }
+
+//   @media (max-width: $mobile-width) {
+//     padding: 0 calc(50% - 270px);
+//   }
+// }
