--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -48,7 +48,7 @@
 .intro__title {
   margin: 0;
   margin-bottom: 30px;
-  font-size: 55px;
+  color: inherit;
 
   @media (max-width: $tablet-width) {
     font-size: 30px;
