--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -2,6 +2,8 @@
   font-size: 55px;
   line-height: 80px;
   font-weight: 600;
+  color: $black-special;
+  letter-spacing: -1.245px;
 
   &--small {
     font-size: 18px;
