fix global styles

--- a/source/sass/blocks/places.scss
+++ b/source/sass/blocks/places.scss
@@ -1,8 +1,8 @@
-.places {
-  @media (max-width: $tablet-width) {
-    text-align: center;
-  }
-}
+// .places {
+//   @media (max-width: $tablet-width) {
+//     text-align: center;
+//   }
+// }
 
 .places__wrapper {
   @include wrapper;
