--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,3 +1,26 @@
+.reviews {
+  position: relative;
+  background-color: $white;
+
+  &::before {
+    position: absolute;
+    content: "Отзывы";
+    top: 20px;
+    left: 26px;
+    font-size: 30px;
+    color: $black-special;
+  }
+
+  &::after {
+    @include pseudo;
+    top: 67px;
+    left: 30px;
+    width: 68px;
+    height: 0.73px;
+    background-color: $orange;
+  }
+}
+
 .reviews__author {
   display: flex;
   align-items: center;
