--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -4,3 +4,19 @@ img {
   height: auto;
   object-fit: cover;
 }
+
+body {
+  margin: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+  font-family: "Montserrat", "Tahoma", sans-serif;
+  font-weight: normal;
+  line-height: 28px;
+  color: rgba($black-special, 0.7);
+
+  @media (max-width: $tablet-width) {
+    text-align: center;
+  }
+}
