--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,9 +1,8 @@
-@import "global/global.scss";
 @import "global/vars";
+@import "global/global";
 @import "global/fonts";
 @import "global/mixin";
 @import "global/visually-hidden";
-@import "blocks/page";
 @import "blocks/header";
 @import "blocks/site-nav";
 @import "blocks/footer";
