--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,6 +1,8 @@
 .reviews {
   position: relative;
+  padding: 100px 30px;
   background-color: $white;
+  box-sizing: border-box;
 
   &::before {
     position: absolute;
@@ -18,6 +20,10 @@
     width: 68px;
     height: 0.73px;
     background-color: $orange;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding: 100px 30px 0;
   }
 }
 
