--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -4,9 +4,9 @@
   list-style: none;
 }
 
-@mixin wrapper {
-  margin: 0 auto;
-  max-width: $desktop-width;
+// @mixin wrapper {
+//   margin: 0 auto;
+//   max-width: $desktop-width;
 
   // @media (min-width: @tablet-width) {
   //   padding-left: 50px;
@@ -17,7 +17,7 @@
   // @media (min-width: @desktop-width) {
   //   max-width: 1050px;
   // }
-}
+// }
 
 // @mixin pseudo ($display: block, $pos: absolute, $content: "") {
 //   content: $content;
@@ -34,9 +34,11 @@
   margin: 0 auto;
   max-width: $desktop-width;
   padding: 0 15px;
+  // padding: 0 calc(50% - 590px);
+  // outline: 1px solid red;
 
-  // @media (max-width: @tablet-width) {
-  //   max-width: 1050px;
+  // @media (max-width: $tablet-width) {
+  //   padding: 0;
   // }
 
   @media (max-width: $mobile-width) {
