--- a/source/sass/global/vars.scss
+++ b/source/sass/global/vars.scss
@@ -2,7 +2,7 @@
 
 $black: #141517;
 $black-special: #2c2e3f;
-$dark-blue: #2c2e3f;
+// $dark-blue: #2c2e3f;
 $orange: #fe7865;
 $orange-hover: #f17d4b;
 $grey: #93939b;
