--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -10,5 +10,9 @@
   background-color: $orange;
   border: 0;
   box-sizing: border-box;
+  cursor: pointer;
 
+  &:hover {
+    background-color: $orange-hover;
+  }
 }
