--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -16,6 +16,7 @@
 .header__logo {
   display: inline-block;
   margin-right: auto;
+  margin-left: -20px;
   padding: 20px;
 
   @media (max-width: $tablet-width) {
