--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -9,7 +9,7 @@
     font-size: 18px;
   }
 
-  @media (max-width: $desktop-width) {
+  @media (max-width: $tablet-width) {
     font-size: 30px;
     line-height: 150%;
   }
