--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,5 +1,4 @@
 .price {
-  outline: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -14,7 +13,6 @@
 }
 
 .price__inner {
-  outline: 1px solid green;
   // margin-left: auto;
   order: 3;
   flex: 1 1 200px;
@@ -54,6 +52,7 @@
 .price__title {
   position: relative;
   margin: 0;
+  margin-bottom: 53px;
 
   &::after {
     @include line(-20px, 175px, 4px, $orange);
@@ -68,8 +67,25 @@
 
 .price__text {
   margin: 0;
+  margin-bottom: 60px;
 }
 
 .price__subtitle {
   margin: 0;
+  padding-left: 30px;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 34px;
+  color: $black;
+}
+
+.price__phone {
+  font-size: 20px;
+  line-height: 32px;
+
+  svg {
+    margin-top: 5px;
+    fill: none;
+    stroke: $orange;
+  }
 }
