add desktop feedback

--- a/source/sass/blocks/places.scss
+++ b/source/sass/blocks/places.scss
@@ -1,8 +1,6 @@
-// .places {
-//   @media (max-width: $tablet-width) {
-//     text-align: center;
-//   }
-// }
+.places {
+margin-bottom: 138px;
+}
 
 .places__wrapper {
   @include wrapper;
