--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -45,6 +45,6 @@
   color: $black-special;
 }
 
-.reviews__text {
-  outline: 1px solid green;
-}
+// .reviews__text {
+//   outline: 1px solid green;
+// }
