--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -17,7 +17,7 @@
   left: 45%;
   display: flex;
   flex-direction: column;
-  margin-left:  auto;
+  margin-left: auto;
   flex: 1 0 50%;
   width: 50%;
   max-width: 656px;
@@ -25,8 +25,8 @@
   background-color: $white;
   transform: translateY(-50%);
   box-sizing: border-box;
-  box-shadow: 0px 4px 30px rgba(41, 54, 66, 0.1);
-border-radius: 5px;
+  box-shadow: 0 4px 30px rgba($black, 0.1);
+  border-radius: 5px;
 }
 
 .feedback__title {
