--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 30PX ;
+  margin-bottom: 30px;
   width: 100%;
 }
 
