--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -4,27 +4,40 @@
   background-color: $white;
   box-sizing: border-box;
 
-  &::before {
-    position: absolute;
-    content: "Отзывы";
-    top: 20px;
-    left: 26px;
-    font-size: 30px;
-    color: $black-special;
-  }
+  // &::before {
+  //   position: absolute;
+  //   content: "Отзывы";
+  //   top: 20px;
+  //   left: 26px;
+  //   font-size: 30px;
+  //   color: $black-special;
+  // }
 
-  &::after {
-    @include pseudo;
-    top: 67px;
-    left: 30px;
-    width: 68px;
-    height: 0.73px;
-    background-color: $orange;
-  }
+  // &::after {
+  //   @include pseudo;
+  //   top: 67px;
+  //   left: 30px;
+  //   width: 68px;
+  //   height: 0.73px;
+  //   background-color: $orange;
+  // }
 
   @media (max-width: $tablet-width) {
     padding: 100px 30px 0;
   }
+}
+
+.reviews__title {
+  position: relative;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 37px;
+  letter-spacing: -0.691667px;
+
+  &::after {
+    @include line (-20px, 68px, 0.73px, $orange);
+  }
+
 }
 
 .reviews__author {
