--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -3,14 +3,18 @@
   line-height: 80px;
   font-weight: 600;
   color: $black-special;
-  letter-spacing: -1.245px;
 
   &--small {
     font-size: 18px;
   }
 
+  @media (max-width: $mobile-width) {
+    font-size: 24px;
+  }
   @media (max-width: $tablet-width) {
     font-size: 30px;
     line-height: 150%;
+    text-align: center;
   }
+
 }
