--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -12,18 +12,30 @@
   background-size: cover;
   background-color: $grey;
 
+  @media (min-resolution: $retina) {
+    background-image: url("../img/background-intro@2x.jpg");
+  }
+
   @media (max-width: $tablet-width) {
     padding: 60px 0;
     min-height: 344px;
     text-align: center;
     background-image: url("../img/background-intro-tablet@1x.jpg");
     background-size: 1023px auto;
+
+    @media (min-resolution: $retina) {
+      background-image: url("../img/background-intro-tablet@2x.jpg");
+    }
   }
 
   @media (max-width: $mobile-width) {
     padding-top: 81px;
     background-image: url("../img/background-intro-mobile@1x.jpg");
     background-size: 767px auto;
+
+    @media (min-resolution: $retina) {
+      background-image: url("../img/background-intro-mobile@2x.jpg");
+    }
   }
 }
 
