--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
   display: block;
-  padding: 30px 40px;
+  padding: 30px;
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
