--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -7,7 +7,13 @@
 
   img {
     width: 844px;
+
+    @media (max-width: $tablet-width) {
+      width: 100%;
+    }
   }
+
+
   // background: url("../img/feedback-bg-desktop.jpg") no-repeat calc(50% - 6px) left center;
 }
 
@@ -27,6 +33,13 @@
   box-sizing: border-box;
   box-shadow: 0 4px 30px rgba($black, 0.1);
   border-radius: 5px;
+
+  @media (max-width: $tablet-width) {
+    top: 30px;
+    left: 50%;
+    width: 90%;
+    transform: translateX(-50%);
+  }
 }
 
 .feedback__title {
