--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,40 +1,38 @@
 .reviews {
-  padding: 20px 30px 10px;
+  padding: 30px;
   background-color: $white;
   box-sizing: border-box;
 
-  // &::before {
-  //   position: absolute;
-  //   content: "Отзывы";
-  //   top: 20px;
-  //   left: 26px;
-  //   font-size: 30px;
-  //   color: $black-special;
-  // }
-
-  // &::after {
-  //   @include pseudo;
-  //   top: 67px;
-  //   left: 30px;
-  //   width: 68px;
-  //   height: 0.73px;
-  //   background-color: $orange;
-  // }
-
   @media (max-width: $tablet-width) {
     padding: 100px 30px 0;
+    text-align: left;
+  }
+
+  @media (max-width: $mobile-width) {
+    text-align: center;
   }
 }
 
 .reviews__title {
   position: relative;
+  margin-bottom: 33px;
   font-weight: 500;
   font-size: 30px;
   line-height: 37px;
   letter-spacing: -0.691667px;
+  text-align: left;
 
   &::after {
-    @include line (-20px, 68px, 0.73px, $orange);
+    @include line (-13px, 68px, 0.73px, $orange);
+  }
+
+  @media (max-width: $mobile-width) {
+    text-align: center;
+
+    &::after {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
 }
@@ -60,4 +58,5 @@
 .reviews__text {
   margin: 0 0 35px;
   font-size: 14px;
+  letter-spacing: -0.408333px;
 }
