--- a/source/sass/blocks/tariffs.scss
+++ b/source/sass/blocks/tariffs.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   color: $black-special;
-  padding: 30px;
+  padding: 38px 33px;
   box-shadow: 0 0 0 1px rgba($black-special, 0.3);
   border-radius: 6px;
   box-sizing: border-box;
@@ -28,6 +28,13 @@
       }
     }
   }
+
+  @media (max-width: $tablet-width) {
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
 }
 
 .tariffs__title {
@@ -47,11 +54,27 @@
   &::after {
     @include line(-20px, 100%, 1px, rgba($black-special, 0.3));
   }
+
+  @media (max-width: $tablet-width) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    width: auto;
+  }
 }
 
 .tariffs__list {
   @include list-style-reset;
   line-height: 32px;
+
+  @media (max-width: $tablet-width) {
+    padding: 0 2rem;
+    text-align: left;
+  }
 }
 
 .tariffs__item {
@@ -84,4 +107,10 @@
 
 .tariffs__button {
   margin-top: auto;
+
+  @media (max-width: $tablet-width) {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
 }
