--- a/source/sass/blocks/places.scss
+++ b/source/sass/blocks/places.scss
@@ -1,10 +1,10 @@
 .places {
-  margin-bottom: 138px;
+  margin-bottom: 136px;
 
   background-image: url("../img/places-bg.svg");
   background-repeat: no-repeat;
   background-size: 1444px auto;
-  background-position: bottom center;
+  background-position: bottom 403px center;
 }
 
 .places__wrapper {
