--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,42 +1,47 @@
 .feedback {
+  @include wrapper;
   position: relative;
+  display: flex;
+  align-items: center;
   margin: 0 auto 170px;
-  padding: 0 calc(50% - 586px);
+  padding-left: 22px;
+  // padding: 30px 0;
   text-align: center;
   color: $black;
-
-  img {
-    width: 844px;
-
-    @media (max-width: $tablet-width) {
-      width: 100%;
-    }
-  }
-
-
-  // background: url("../img/feedback-bg-desktop.jpg") no-repeat calc(50% - 6px) left center;
 }
 
-.feedback__wrapper {
+.feedback__bg {
+  margin: 0;
+  padding: 70px 0;
+  width: 70%;
+  min-height: 455px;
+  background-image: url("../img/feedback-bg-desktop@1x.jpg");
+  background-color: $orange;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+
+  box-sizing: border-box;
+
+  @media (max-width: $tablet-width) {
+    width: 100% ;
+  }
+}
+
+.feedback__inner {
   position: absolute;
-  top: 50%;
-  left: 45%;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  flex: 1 0 50%;
-  width: 50%;
-  max-width: 656px;
-  padding: 50px 30px;
+  right: 0;
+  margin: 0 auto;
+  width: 655px;
+  padding: 50px;
   background-color: $white;
-  transform: translateY(-50%);
   box-sizing: border-box;
   box-shadow: 0 4px 30px rgba($black, 0.1);
   border-radius: 5px;
 
   @media (max-width: $tablet-width) {
-    top: 30px;
-    left: 50%;
+    top: 65px;
+    left: 52%;
     width: 90%;
     transform: translateX(-50%);
   }
@@ -51,5 +56,5 @@
 }
 
 .feedback__text {
-  margin: 0 0 24px;
+  margin: 0 0 20px;
 }
