--- a/source/sass/blocks/places.scss
+++ b/source/sass/blocks/places.scss
@@ -95,7 +95,6 @@
       width: 100%;
     }
   }
-
 }
 
 .places__spotname {
@@ -113,7 +112,7 @@
   transform: translateX(-50%);
 }
 
-.places__slider {
+.places__swiper {
   margin-top: -11px;
   margin-bottom: 226px;
 
