--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,10 +10,9 @@
 @import "blocks/intro";
 @import "blocks/button";
 @import "blocks/places";
-@import "blocks/slider";
+@import "blocks/swiper";
 @import "blocks/reviews";
 @import "blocks/price";
 @import "blocks/tariffs";
 @import "blocks/feedback";
 @import "blocks/form";
-@import "blocks/swipe-tab";
