--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -22,7 +22,7 @@
 
 .swiper__list {
   @include list-style-reset;
-  }
+}
 
 .swiper__item {
   position: relative;
@@ -49,8 +49,7 @@
 
 .swiper__title {
   position: relative;
-  // margin: 0;
-  margin: 0 0px 50px;
+  margin: 0 0 50px;
   letter-spacing: -1.245px;
 
 
@@ -73,7 +72,6 @@
   @media (max-width: $tablet-width) {
     width: 100%;
   }
-
 }
 
 .swiper__text {
@@ -91,6 +89,7 @@
   width: 250px;
   margin-bottom: 15px;
   letter-spacing: 2.5px;
+
   @media (max-width: $tablet-width) {
     margin-bottom: 110px;
   }
@@ -131,6 +130,7 @@
     width: 300px;
   }
 }
+
 .swiper-wrapper {
   @include list-style-reset;
   display: flex;
